[build-system]
requires = ["setuptools >=67.6.1,<77"]
build-backend = "setuptools.build_meta"

[project]
name = "json-schema-common"
# TODO: dynamically loaded version?
version = "0.4.1"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.23.0,<5",
]

[project.optional-dependencies]
dev = ["pylint~=3.3.5"]

[tool.setuptools.package-data]
json_schema_common = ["schemas/**.json"]
