[build-system]
requires = ["setuptools >=68.2.2,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "json-schema-common"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.25.1,<5",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["pylint~=3.3.8"]

[tool.setuptools.package-data]
json_schema_common = [
    "VERSION",
    "schemas/**.json",
]

[tool.setuptools.dynamic]
version = { file = ["json_schema_common/VERSION"] }
